--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
         </nav>
         <button class="button-menu-toggle">Menu</button>
       </div>
+      <main>
+        <div class="greeting">felicidades haz logrado demasiado</div>
     <div class="container">
         <h1>Acerca de</h1>
 <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
@@ -28,6 +30,7 @@
 <img src="tipos-ciencia-social.jpg" alt="Descripción de la imagen 3" />
 </div>
 </div>
+</main>
     </body>
     <script src=script.js></script>
 </html>
