--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
             <nav class="navbar" role="navigation"></nav>
           <a href="#" class="brand">Mi página web</a>
           <ul class="nav-links">
-            <li><a href="mi-primer-website.html">Home</a></li>
+            <li><a href="index.htmls">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
