--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <div class="container-nav">
         <nav class="navbar">
             <nav class="navbar" role="navigation"></nav>
-          <a href="#" class="brand">Mi página web</a>
+          <a href="index.html" class="brand">Mi página web</a>
           <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
